<resources>
    <string name="app_name">School Bus Tracker</string>
    <string name="welcome_txt">Welcome to School Bus Tracker</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="add_child">Add child</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_txt">password</string>
    <string name="bus_no_title">Bus number:</string>
    <string name="bus_no">Searching…</string>
    <string name="no_bus_av">No bus available</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="track">Track</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="google_maps_API_key">AIzaSyAtDZuZNwYtQrRc75IdA2TBaRVBBgkSo_U</string>
    <string name="API_key">AIzaSyDSQR5HonLVinzu7udadK7PfWmcbh_boW8</string>

    <string name="station_radius">Station radius</string>
    <string name="pick_up">Pick up</string>
    <string name="drop_off">Drop off</string>
    <string name="save">Save</string>
    <string name="school">School:</string>
    <string name="in_bus">In-Bus</string>
    <string name="dropped">Dropped</string>
    <string name="absent">Absent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="absent_children">Absent Children:</string>
    <string name="add_absent">Add Absent</string>
    <string name="remove">Remove</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="recovery_message">A recovery link has been sent to your email. Check for steps to reset password and log in.</string>
    <string name="speed">0 kph</string>
    <string name="home">Home</string>
    <string name="request_absence">Request absence</string>
    <string name="change_route">Change Route</string>
    <string name="logout">Logout</string>
</resources>
